// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessagesDropdown renders correctly with a list of threads 1`] = `
<Connect(TopNavDropdown)
  body={
    <div
      data-styleName="threads"
    >
      <MessagesDropdownItem
        currentUserId="1"
        onClick={[Function]}
        thread={
          SessionBoundModel {
            "_fields": Object {
              "id": 2,
              "updatedAt": 2017-05-07T03:24:00.000Z,
            },
          }
        }
      />
      <MessagesDropdownItem
        currentUserId="1"
        onClick={[Function]}
        thread={
          SessionBoundModel {
            "_fields": Object {
              "id": 1,
              "updatedAt": 1995-12-17T03:23:00.000Z,
            },
          }
        }
      />
    </div>
  }
  header={
    <div
      data-styleName="header-content"
    >
      <Link
        data-styleName="open"
        replace={false}
        to="/t/2"
      >
        Open Messages
      </Link>
      <Link
        data-styleName="new"
        replace={false}
        to="/t/new"
      >
        New
      </Link>
    </div>
  }
  onToggle={[Function]}
  toggleChildren={
    <span>
      click me
    </span>
  }
/>
`;

exports[`MessagesDropdown renders correctly with an empty list 1`] = `
<Connect(TopNavDropdown)
  body={
    <div
      data-styleName="threads"
    />
  }
  header={
    <div
      data-styleName="header-content"
    >
      <Link
        data-styleName="open"
        replace={false}
        to="/t/new"
      >
        Open Messages
      </Link>
      <Link
        data-styleName="new"
        replace={false}
        to="/t/new"
      >
        New
      </Link>
    </div>
  }
  onToggle={[Function]}
  toggleChildren={
    <span>
      click me
    </span>
  }
/>
`;

exports[`MessagesDropdownItem renders correctly with an empty thread 1`] = `null`;
